Update PersonaWrapper per gestire i file da caricare.
Implementazione di PersonaValidator.
Correzioni varie a PersonaController

--- a/src/main/resources/templates/persona/personaEdit.html
+++ b/src/main/resources/templates/persona/personaEdit.html
@@ -11,7 +11,7 @@
 				<div class="x_panel">
 					<div class="x_title">
 						<h2 th:text="#{label.dati_del} + ' ' + ${personaWrapper.persona.ruolo.nome}">Dati del persona.ruolo</h2>
-						<a class="btn btn-primary pull-right" th:text="#{label.nuovo}" th:href="@{|/accreditamento/${personaWrapper.accreditamentoId}/provider/${personaWrapper.providerId}/persona/new?ruolo=${}|}"></a>
+						<a class="btn btn-primary pull-right" th:text="#{label.nuovo}" th:href="@{|/accreditamento/${personaWrapper.accreditamentoId}/provider/${personaWrapper.providerId}/persona/newAnagrafica?ruolo=${personaWrapper.persona.ruolo}|}"></a>
 						<a class="btn btn-primary pull-right" th:text="#{label.annulla}" th:href="@{|/accreditamento/${personaWrapper.accreditamentoId}|}"></a>
 						<div class="clearfix"></div>
 					</div>
@@ -19,9 +19,11 @@
 						<form id="formPersona" class="form-horizontal form-label-left" th:action="@{|/accreditamento/${personaWrapper.accreditamentoId}/provider/${personaWrapper.providerId}/persona/save|}"
 								method="post" enctype="multipart/form-data" novalidate="novalidate">
 								
-							<input type="hidden" name="editId" th:value="${personaWrapper.persona.id}" /> 
+							<input type="hidden" name="editId" th:value="${personaWrapper.persona.id}" />
+							<input type="hidden" name="editId_Anagrafica" th:value="${personaWrapper.persona.anagrafica.id}" /> 
 							<input type="hidden" th:field="${personaWrapper.accreditamentoId}" /> 
 							<input type="hidden" th:field="${personaWrapper.providerId}" /> 
+							<input type="hidden" th:field="${personaWrapper.ruolo}" /> 
 							<input type="hidden" th:field="${personaWrapper.idEditabili}" />
 							<input type="hidden" th:field="${personaWrapper.idOffset}" />
 							
@@ -228,48 +230,59 @@
 																
 							<!-- allegato 1 (atto di nomina) -->
 							<div th:unless="${personaWrapper.persona.delegatoLegaleRappresentante}"
-								class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.nomina.data')} ? 'bad'">
+								class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.attoNomina')} ? 'bad'">
 								<label class="control-label col-xs-1" th:text="${personaWrapper.idOffset + 8}">9</label>
-								<label class="control-label col-md-3 col-sm-3 col-xs-11" for="nomina_persona">
+								<label class="control-label col-md-3 col-sm-3 col-xs-11" for="attoNomina_persona">
 									<span th:text="#{label.atto_nomina}">Atto di nomina</span>
 									<span class="required">*</span>
 								</label>
 								<th:block th:if="${#lists.contains(personaWrapper.idEditabili, personaWrapper.idOffset + 8)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
-											<input type="file" id="nomina_persona" name="nomina_persona" required="required"
+											<input th:unless="${personaWrapper.attoNomina.data}" type="file" id="attoNomina_persona" name="attoNomina_persona" required="required"
 												class="form-control col-md-7 col-xs-12 btn"/>
+												
+											<span th:if="${personaWrapper.attoNomina.data}" id="attoNominaFile" class="form-control col-md-5 col-xs-10">
+												<span class="col-md-11 col-xs-11">
+													<a th:text="${personaWrapper.attoNomina.nomeFile}" th:href="@{|/files/${personaWrapper.attoNomina.id}|}"></a>
+												</span>
+												<span class="col-md-1 col-xs-1">
+													<a th:href="@{|/files/${personaWrapper.attoNomina.id}/delete|}">
+														<i class="fa fa-remove red icon"></i>
+													</a>
+												</span>
+											</span>
 									</div>
 								</th:block>
 								<th:block th:unless="${#lists.contains(personaWrapper.idEditabili, personaWrapper.idOffset + 8)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="nomina_persona" class="control-label left-align col-md-7 col-xs-12"
-											th:text="${personaWrapper.nomina.nomeFile}"></label>
+										<label id="attoNomina_persona" class="control-label left-align col-md-7 col-xs-12"
+											th:text="${personaWrapper.attoNomina.nomeFile}"></label>
 									</div>
 								</th:block>
-								<div th:if="${#fields.hasErrors('personaWrapper.nomina.data')}" class="alert" th:errors="${personaWrapper.nomina.data}"></div>
+								<div th:if="${#fields.hasErrors('personaWrapper.attoNomina')}" class="alert" th:errors="${personaWrapper.attoNomina}"></div>
 							</div>
 							
 							<!-- allegato 2 (curriculum vitae) -->
 							<div th:unless="${personaWrapper.persona.legaleRappresentante}"
-								class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.curriculumVitae.data')} ? 'bad'">
+								class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.cv.data')} ? 'bad'">
 								<label class="control-label col-xs-1" th:text="${personaWrapper.idOffset + 9}">10</label>
-								<label class="control-label col-md-3 col-sm-3 col-xs-11" for="curriculumVitae_persona">
+								<label class="control-label col-md-3 col-sm-3 col-xs-11" for="cv_persona">
 									<span th:text="#{label.curriculum_vitae}">Curriculum vitae</span>
 									<span class="required">*</span>
 								</label>
 								<th:block th:if="${#lists.contains(personaWrapper.idEditabili, personaWrapper.idOffset + 9)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
-											<input type="file" id="curriculumVitae_persona" name="curriculumVitae_persona" required="required"
-												class="form-control col-md-7 col-xs-12 btn" th:field="${personaWrapper.curriculumVitae.nomeFile}"/>
+											<input type="file" id="cv_persona" name="cv_persona" required="required"
+												class="form-control col-md-7 col-xs-12 btn" th:field="${personaWrapper.cv.nomeFile}"/>
 									</div>
 								</th:block>
 								<th:block th:unless="${#lists.contains(personaWrapper.idEditabili, personaWrapper.idOffset + 9)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="curriculumVitae_persona" class="control-label left-align col-md-7 col-xs-12"
-											th:text="${personaWrapper.curriculumVitae.nomeFile}"></label>
+										<label id="cv_persona" class="control-label left-align col-md-7 col-xs-12"
+											th:text="${personaWrapper.cv.nomeFile}"></label>
 									</div>
 								</th:block>
-								<div th:if="${#fields.hasErrors('personaWrapper.curriculumVitae.data')}" class="alert" th:errors="${personaWrapper.curriculumVitae.data}"></div>
+								<div th:if="${#fields.hasErrors('personaWrapper.cv.data')}" class="alert" th:errors="${personaWrapper.cv.data}"></div>
 							</div>
 							
 							<!-- allegato 3 (atto di delega) -->
@@ -283,7 +296,7 @@
 								<th:block th:if="${#lists.contains(personaWrapper.idEditabili, personaWrapper.idOffset + 10)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
 											<input type="file" id="delega_persona" name="delega_persona" required="required"
-												class="form-control col-md-7 col-xs-12 btn" th:field="${personaWrapper.delega.nomeFile}"/>
+												class="form-control col-md-7 col-xs-12 btn" />
 									</div>
 								</th:block>
 								<th:block th:unless="${#lists.contains(personaWrapper.idEditabili, personaWrapper.idOffset + 10)}">
