--- a/src/main/resources/templates/provider/providerEdit.html
+++ b/src/main/resources/templates/provider/providerEdit.html
@@ -41,7 +41,7 @@
 				                </th:block>
 				             	<th:block th:unless="${#lists.contains(providerWrapper.idEditabili, counter)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="tipoOrganizzatore" class="control-label left-align col-md-7 col-xs-12"
+										<label id="tipoOrganizzatore_disabled" class="form-control form-disabled-text left-align col-md-7 col-xs-12"
 											th:text="${providerWrapper.provider.tipoOrganizzatore}"></label>
 									</div>
 								</th:block>
@@ -63,7 +63,7 @@
 								</th:block>
 								<th:block th:unless="${#lists.contains(providerWrapper.idEditabili, counter)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="denominzioneLegale" class="control-label left-align col-md-7 col-xs-12"
+										<label id="denominzioneLegale_disabled" class="form-control form-disabled-text left-align col-md-7 col-xs-12"
 											th:text="${providerWrapper.provider.denominazioneLegale}"></label>
 									</div>
 								</th:block>
@@ -85,7 +85,7 @@
 								</th:block>
 								<th:block th:unless="${#lists.contains(providerWrapper.idEditabili, counter)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="partitaIva" class="control-label left-align col-md-7 col-xs-12"
+										<label id="partitaIva_disabled" class="form-control form-disabled-text left-align col-md-7 col-xs-12"
 											th:text="${providerWrapper.provider.partitaIva}"></label>
 									</div>
 								</th:block>
@@ -107,7 +107,7 @@
 								</th:block>
 								<th:block th:unless="${#lists.contains(providerWrapper.idEditabili, counter)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="codiceFiscale" class="control-label left-align col-md-7 col-xs-12"
+										<label id="codiceFiscale_disabled" class="form-control form-disabled-text left-align col-md-7 col-xs-12"
 											th:text="${providerWrapper.provider.codiceFiscale}"></label>
 									</div>
 								</th:block>
@@ -131,7 +131,7 @@
 								</th:block>
 								<th:block th:unless="${#lists.contains(providerWrapper.idEditabili, counter)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="ragioneSociale" class="control-label left-align col-md-7 col-xs-12"
+										<label id="ragioneSociale_disabled" class="form-control form-disabled-text left-align col-md-7 col-xs-12"
 											th:text="${providerWrapper.provider.ragioneSociale}"></label>
 									</div>
 								</th:block>
@@ -162,7 +162,7 @@
 									</th:block>
 									<th:block th:unless="${#lists.contains(providerWrapper.idEditabili, counter)}">
 										<div class="col-md-4 col-sm-4 col-xs-12">
-											<label id="naturaOrganizzazione" class="control-label left-align col-md-7 col-xs-12"
+											<label id="naturaOrganizzazione_disabled" class="form-control form-disabled-text left-align col-md-7 col-xs-12"
 												th:text="${providerWrapper.provider.naturaOrganizzazione}"></label>
 										</div>
 									</th:block>
@@ -193,7 +193,7 @@
 									</th:block>
 									<th:block th:unless="${#lists.contains(providerWrapper.idEditabili, counter)}">
 										<div class="col-md-4 col-sm-4 col-xs-12">
-											<label id="noProfit" class="control-label left-align col-md-7 col-xs-12"
+											<label id="noProfit_disabled" class="form-control form-disabled-text left-align col-md-7 col-xs-12"
 												th:text="${providerWrapper.provider.noProfit}"></label>
 										</div>
 									</th:block>
