--- a/src/main/resources/templates/sede/sedeEdit.html
+++ b/src/main/resources/templates/sede/sedeEdit.html
@@ -44,7 +44,7 @@
 								</th:block>
 								<th:block th:unless="${#lists.contains(sedeWrapper.idEditabili, counter)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="provincia_sede" class="control-label left-align col-md-7 col-xs-12"
+										<label id="provincia_sede_disabled" class="form-control form-disabled-text left-align col-md-7 col-xs-12"
 											th:text="${sedeWrapper.sede.provincia}"></label>
 									</div>
 								</th:block>
@@ -65,7 +65,7 @@
 								</th:block>
 								<th:block th:unless="${#lists.contains(sedeWrapper.idEditabili, counter)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="comune_sede" class="control-label left-align col-md-7 col-xs-12"
+										<label id="comune_sede_disabled" class="form-control form-disabled-text left-align col-md-7 col-xs-12"
 											th:text="${sedeWrapper.sede.comune}"></label>
 									</div>
 								</th:block>
@@ -86,7 +86,7 @@
 								</th:block>
 								<th:block th:unless="${#lists.contains(sedeWrapper.idEditabili, counter)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="indirizzo_sede" class="control-label left-align col-md-7 col-xs-12"
+										<label id="indirizzo_sede" class="form-control form-disabled-text left-align col-md-7 col-xs-12"
 											th:text="${sedeWrapper.sede.indirizzo}"></label>
 									</div>
 								</th:block>
@@ -107,7 +107,7 @@
 								</th:block>
 								<th:block th:unless="${#lists.contains(sedeWrapper.idEditabili, counter)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="CAP_sede" class="control-label left-align col-md-7 col-xs-12"
+										<label id="CAP_sede" class="form-control form-disabled-text left-align col-md-7 col-xs-12"
 											th:text="${sedeWrapper.sede.cap}"></label>
 									</div>
 								</th:block>
@@ -128,7 +128,7 @@
 								</th:block>
 								<th:block th:unless="${#lists.contains(sedeWrapper.idEditabili, counter)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="telefono_sede" class="control-label left-align col-md-7 col-xs-12"
+										<label id="telefono_sede" class="form-control form-disabled-text left-align col-md-7 col-xs-12"
 											th:text="${sedeWrapper.sede.telefono}"></label>
 									</div>
 								</th:block>
@@ -148,7 +148,7 @@
 								</th:block>
 								<th:block th:unless="${#lists.contains(sedeWrapper.idEditabili, counter)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="fax_sede" class="control-label left-align col-md-7 col-xs-12"
+										<label id="fax_sede" class="form-control form-disabled-text left-align col-md-7 col-xs-12"
 											th:text="${sedeWrapper.sede.fax}"></label>
 									</div>
 								</th:block>
@@ -169,7 +169,7 @@
 								</th:block>
 								<th:block th:unless="${#lists.contains(sedeWrapper.idEditabili, counter)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
-										<label id="email_sede" class="control-label left-align col-md-7 col-xs-12"
+										<label id="email_sede" class="form-control form-disabled-text left-align col-md-7 col-xs-12"
 											th:text="${sedeWrapper.sede.email}"></label>
 									</div>
 								</th:block>
